tempfile/derive_more/tests/compile_fail/into/legacy_types_attribute.rs
#[derive(derive_more::Into)]
#[into(types(i32, "&str"))]
struct Foo(String);

fn main() {}
